# kamibiki

./: .gitignore  CLINE.md  Cargo.toml  PLAN.md  README.md
examples/: bench_chunk.rs
plugin/: README.md  kamibiki.test.ts  kamibiki.ts  package.json  tsconfig.json
src/: gc.rs  lib.rs  main.rs  ops.rs  server.rs  snippet.rs
src/chunk/: lines.rs  mod.rs  treesitter.rs
src/core/: config.rs  git.rs  mod.rs  types.rs
src/embed/: mod.rs  voyage.rs
src/index/: compact.rs  format.rs  mmap.rs  mod.rs
src/search/: chain.rs  mod.rs  rerank.rs  vector.rs
